# steward

./: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.disabled  LICENSE  README.md  biome.json  config.example.json  data.json  docker-compose.yml  main.js  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
models/: README.md
modules/: autoupload.js  autoupload.ts  chatbot.ts  error-handling.js  error-handling.ts  log.js  log.ts  luckyperms.js  no-ping.js  no-ping.ts  post-help.ts  skinrestorer.js  skinrestorer.ts
modules/checks/: checks.config.js  checks.config.ts  index.js  index.ts
modules/commands/: commands.config.ts  index.js  index.ts  list.json  metadata.ts
modules_disabled/: donors.js  luckyperms.js  role-on-join.js  role-on-join.ts
src/: ai.rs  bot-config.ts  commands.rs  config.rs  data.json  download.rs  main.rs  main.ts  ocr.rs  patterns.rs  releases.rs  runtime.rs  state.rs  upload-llms.ts
src/bots/: index.ts  jarvis.rs  jarvis.ts  mod.rs  steward.rs  steward.ts
src/events/: autoupload.rs  chatbot.rs  checks.rs  logging.rs  message_replies.rs  mod.rs  no_ping.rs  thread_starter.rs
src/lib/: ai.ts  bot-token.ts  github-release.ts
src/modules/: autoupload.ts  chatbot.ts  error-handling.ts  log.ts  message-replies.ts  no-ping.ts  post-help.ts  skinrestorer.ts
src/modules/checks/: checks-config.ts  index.ts
src/modules/commands/: commands-config.ts  index.ts  metadata.ts
