[package]
name = "steward"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
description = "Support and moderation Discord bots for SkinsRestorer and SoulFire"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
futures = "0.3.31"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
ocrs = "0.12.2"
poise = "0.6.2"
regex = "1.12.2"
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "gzip", "http2", "json", "rustls", "stream"] }
rig-core = "0.40.0"
roxmltree = "0.21.1"
rten = { version = "0.24.0", default-features = false, features = ["rten_format"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-normalization = "0.1.25"
yaml_serde = "0.10.4"

[profile.release]
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
